# Sort-And-Search-Algorithms-in-C

./: CMakeLists.txt  SortAndSearchAlgos  anleitung.txt  anleitung.txt.txt  array_functions.c  array_functions.h  bubblesort.c  bubblesort.h  compilation_info.md  create_executable.bash  create_executable.sh  create_executable.txt  exercises.c  exercises.h  exercises1.c  exercises1.h  exercises2.c  exercises2.h  insertionsort.c  insertionsort.h  key_value_pair.h  linked_list.c  linked_list.h  linkedlist_functions.c  linkedlist_functions.h  main.c  mergesort.c  mergesort.h  node.c  node.h  prog  quicksort.c  quicksort.h  quicksort_search_stdlib.c  quicksort_search_stdlib.h  readme.md  search.c  search.h  sorting_algorithms.c  tree_node.h
